--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src='library/jquery.keyframes.min.js'></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css?ver=1.1.1">
-    <script src="index.js?ver=1.1.1"></script>
-    <title>Linear Adofai v1.1.1</title>
+    <link rel="stylesheet" href="index.css?ver=1.2">
+    <script src="index.js?ver=1.2"></script>
+    <title>Linear Adofai v1.2</title>
   </head>
   <body>
     <div id="backgroundArt">
@@ -19,6 +19,12 @@
       </div>
       <div id="dropFile">
         Click here to select file!<br>(.txt, .adofai)
+      </div>
+      <div id="deleteEffect">
+        <p>Delete Effects</p>
+        <div class="delEffButton effNo">
+          Camera
+        </div>
       </div>
       <div id="transferProgress" style="display: none;">
         0%
