--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src='library/jquery.keyframes.min.js'></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css?ver=1.7">
-    <script src="index.js?ver=1.7"></script>
-    <title>Linear Adofai v1.7</title>
+    <link rel="stylesheet" href="index.css?ver=1.8">
+    <script src="index.js?ver=1.8"></script>
+    <title>Linear Adofai v1.8</title>
   </head>
   <body>
     <div id="backgroundArt">
@@ -36,6 +36,9 @@
         </span>
         <span class="delEffButton effNo">
           AnimateTrack
+        </span>
+        <span class="delEffButton effNo">
+          IgnoreError
         </span>
       </div>
       <div id="transferProgress" style="display: none;">
