--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src='library/jquery.keyframes.min.js'></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css?ver=1.8">
-    <script src="index.js?ver=1.8"></script>
-    <title>Linear Adofai v1.8</title>
+    <link rel="stylesheet" href="index.css?ver=1.9">
+    <script src="index.js?ver=1.9"></script>
+    <title>Linear Adofai v1.9</title>
   </head>
   <body>
     <div id="backgroundArt">
@@ -26,7 +26,7 @@
           Camera
         </span>
         <span class="delEffButton effYes">
-          Linear
+          *Linear
         </span>
         <span class="delEffButton effYes">
           Twirl
@@ -38,8 +38,11 @@
           AnimateTrack
         </span>
         <span class="delEffButton effNo">
-          IgnoreError
+          *IgnoreCalcError
         </span>
+      </div>
+      <div id="infoText">
+        * Means non-ADOFAI thing
       </div>
       <div id="transferProgress" style="display: none;">
         0%
