--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src='library/jquery.keyframes.min.js'></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css?ver=1.9.1">
-    <script src="index.js?ver=1.9.1"></script>
-    <title>Linear Adofai v1.9.1</title>
+    <link rel="stylesheet" href="index.css?ver=1.9.2">
+    <script src="index.js?ver=1.9.2"></script>
+    <title>Linear Adofai v1.9.2</title>
   </head>
   <body>
     <div id="backgroundArt">
@@ -46,6 +46,9 @@
       </div>
       <div id="transferProgress" style="display: none;">
         0%
+      </div>
+      <div id="transferAlert" style="display: none;">
+        Don't Minimize browser or Force other program OR result might be Wrong!!
       </div>
       <div id="downloadFile" style="display: none;">
         Download!
